fixed spacing of hero title and button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ body {
   width: 100%;
   height: 850px;
   display: flex;
+  text-align: center;
   justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
@@ -86,9 +87,13 @@ body {
   background-size: cover;
 }
 
+.hero-title-btn {
+  margin-bottom: 50px;
+}
+
 .hero-title {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: var(--default-margin);
 }
 
 .hero-title a {
@@ -107,7 +112,6 @@ body {
   align-self: center;
   padding: 2px 2px;
   border: 3px solid var(--quinary-color);
-  margin-top: -20px;
 }
 
 .hero-btn:hover {
